# vaultchef

./: .gitignore  AGENTS.md  Date Night: Neon Night Market Escape (Tuesday, February 24, 2026).html  Makefile  README.md  pyproject.toml
filters/: recipe.lua  web.lua
fixtures/VaultExample/Cookbooks/: Family Cookbook.md
fixtures/VaultExample/Recipes/: 116 Lemon Tart.md  118 Anzac Biscuits.md  205 Saag Paneer.md
src/vaultchef/: build.py  cli.py  config.py  errors.py  expand.py  listing.py  pandoc.py  paths.py  shopping.py  templates.py  tex.py  tui.py  validate.py  watch.py
src/vaultchef/domain/: __init__.py  markdown.py  models.py
src/vaultchef/infra/: __init__.py  process.py
src/vaultchef/services/: __init__.py  build_service.py  list_service.py  web_service.py
src/vaultchef/tui/: __init__.py  app.py  common.py  data_sources.py  layout.py  state.py  textual.py  theme.py
src/vaultchef/tui/screens/: __init__.py  build.py  build_progress.py  create.py  mode.py  tex_deps.py
src/vaultchef/tui/widgets/: __init__.py  list_utils.py
templates/: cookbook.html  cookbook.tex  recipe.sty
templates/webapp/: app.css  app.js  index.html
tests/: conftest.py  test_build.py  test_cli.py  test_config.py  test_expand.py  test_list.py  test_pandoc.py  test_paths.py  test_shopping.py  test_templates.py  test_tex.py  test_tui_layout.py  test_validate.py  test_watch.py  test_web_layout.py  test_web_service.py  test_webapp_bundle.py  utils.py
vaultchef-web/: app.css  app.js  index.html
vaultchef-web/content/: index.json
