[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultchef"
version = "0.1.0"
description = "Terminal-only cookbook builder for Obsidian vaults"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Vaultchef" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
vaultchef = "vaultchef.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
